--- a/templates/figure/index.html
+++ b/templates/figure/index.html
@@ -1,4 +1,3 @@
-{% load url from future %}
 
 <!DOCTYPE html>
 <!--
@@ -19,6 +18,11 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
+<!-- TO update static demo
+    cherry-pick something like https://github.com/will-moore/figure/commit/0ec9821
+
+-->
+
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -30,33 +34,34 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="{% static 'figure/3rdparty/bootstrap3/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'figure/css/figure.css' %}">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/figure/css/figure.css">
 
-    {% include "webgateway/base/includes/script_src_jquery.html" %}
-    {% include "webgateway/base/includes/jquery-ui.html" %}
-    <link rel="stylesheet" href="{% static "3rdparty/jquery-ui-1.8.19/themes/base/jquery.ui.base.css" %}" type="text/css" />
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.7.2.min.js"></script>
 
+    <script type="text/javascript" src="//code.jquery.com/ui/1.8.19/jquery-ui.js"></script>
+
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.8.19/themes/smoothness/jquery-ui.css" type="text/css" />
 
     <script>
 
     var RELEASE_VERSION = "v1.0.0-beta2";
 
-    var BASE_WEBFIGURE_URL = "{% url 'figure_index' %}",
-        SAVE_WEBFIGURE_URL = "{% url 'save_web_figure' %}",
-        LIST_WEBFIGURES_URL = "{% url 'list_web_figures' %}",
-        DELETE_WEBFIGURE_URL = "{% url 'delete_web_figure' %}",
-        MAKE_WEBFIGURE_URL = "{% url 'make_web_figure' %}",
-        ACTIVITIES_JSON_URL = "{% url 'activities_json' %}",
-        WEBGATEWAYINDEX = "{% url 'webgateway' %}",
-        WEBINDEX_URL = "{% url 'webindex' %}";
+    var BASE_WEBFIGURE_URL = "/figure/",
+        SAVE_WEBFIGURE_URL = "/figure/save_web_figure/",
+        LIST_WEBFIGURES_URL = "static/json/list_web_figures.json",
+        DELETE_WEBFIGURE_URL = "/figure/delete_web_figure/",
+        MAKE_WEBFIGURE_URL = "/figure/make_web_figure/",
+        ACTIVITIES_JSON_URL = "/webclient/activities_json/",
+        WEBGATEWAYINDEX = "/webgateway",
+        WEBINDEX_URL = "/webclient/";
 
     $(document).ready(function() {
 
         // keep-alive ping every minute, so that OMERO session doesn't die
-        setInterval(function (){
-            $.get("{% url 'keepalive_ping' %}");
-        }, 60000);
+        // setInterval(function (){
+        //     $.get("{% url 'keepalive_ping' %}");
+        // }, 60000);
 
         // load Panels from localStorage (if any)
         // figureModel.panels.fetch({
@@ -303,7 +308,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header" title="Back to OMERO.webclient">
-                <a class="navbar-brand" href="{% url 'webindex' %}">OMERO</a>
+                <a class="navbar-brand" href="/webclient/">OMERO</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -537,22 +542,22 @@
     </div>
 
 
-    <script src="{% static 'figure/3rdparty/json2.js' %}"></script>
-    <script src="{% static 'figure/3rdparty/underscore.js' %}"></script>
-    <script src="{% static 'figure/3rdparty/backbone.js' %}"></script>
-    <!-- <script src="{% static 'figure/3rdparty/backbone-localstorage.js' %}"></script> -->
-    <script src="{% static 'figure/3rdparty/raphael-min.js' %}"></script>
-    <script src="{% static 'figure/3rdparty/mousetrap/mousetrap.min.js' %}"></script>
-    <script src="{% static 'figure/3rdparty/backbone.mousetrap/backbone.mousetrap.js' %}"></script>
-    <script src="{% static 'figure/3rdparty/bootstrap3/js/bootstrap.js' %}"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20130526/json2.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
+    <!-- <script src="/static/figure/3rdparty/backbone-localstorage.js"></script> -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
+    <script src="static/figure/3rdparty/backbone.mousetrap/backbone.mousetrap.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="{% static 'figure/js/templates.js' %}"></script>
-    <script type="text/javascript" src="{% static 'figure/js/figure.js' %}"></script>
-    <script type="text/javascript" src="{% static 'figure/js/undo.js' %}"></script>
-    <script type="text/javascript" src="{% static 'figure/js/raphael-rect.js' %}"></script>
-    <script type="text/javascript" src="{% static 'figure/js/util.js' %}"></script>
-    <script type="text/javascript" src="{% static 'figure/js/files.js' %}"></script>
-    <script type="text/javascript" src="{% static 'figure/js/app.js' %}"></script>
+    <script type="text/javascript" src="static/figure/js/templates.js"></script>
+    <script type="text/javascript" src="static/figure/js/figure.js"></script>
+    <script type="text/javascript" src="static/figure/js/undo.js"></script>
+    <script type="text/javascript" src="static/figure/js/raphael-rect.js"></script>
+    <script type="text/javascript" src="static/figure/js/util.js"></script>
+    <script type="text/javascript" src="static/figure/js/files.js"></script>
+    <script type="text/javascript" src="static/figure/js/app.js"></script>
 
 </body>
 
